--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,16 @@
-main.yml
-name: Test Action
+name: test
 
 on:
   push:
-     branches:
+    branches:
       - main  # or any branch you want to trigger the action
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-       - name: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: xxfxxxxxx@ds.study.iitm.ac.in
+      - name: Print a message
         run: echo "Hello, world!"
