--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Print a message
+      - name: 23f1002698@ds.study.iitm.ac.in
         run: echo "Hello, world!"
